# tflod_inference

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README_cn.md  readme.md
src/: config_utils.cpp  config_utils.h  cv_utils.cpp  cv_utils.h  file_utils.cpp  file_utils.h  fps_utils.cpp  fps_utils.h  main.cpp  os_utils.h  os_utils_linux.cpp  os_utils_windows.cpp  string_utils.cpp  string_utils.h  tflite_data.cpp  tflite_data.h  tflite_od_glue.cpp  tflite_od_glue.h  tflite_od_utils.cpp  tflite_od_utils.h  tflite_utils.cpp  tflite_utils.h  utils.cpp  utils.h  video_capture_utils.cpp  video_capture_utils.h
